// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPage renders page 1`] = `
<Fragment>
  <DocumentHead
    title="Settings"
  />
  <Row
    align="middle"
    className="mv3"
    justify="center"
  >
    <Col
      lg={21}
      md={22}
      xs={24}
      xxl={18}
    >
      <ForwardRef
        bodyStyle={
          Object {
            "padding": "12px 16px",
          }
        }
      >
        <h2>
          Settings
        </h2>
        <p>
          Manage your Inspire account
        </p>
      </ForwardRef>
    </Col>
  </Row>
  <Row
    align="middle"
    className="mb3"
    justify="center"
  >
    <Col
      lg={21}
      md={22}
      xs={24}
      xxl={18}
    >
      <CollapsableForm
        openSections={
          Array [
            "account_email",
            "author_email",
            "orcid",
          ]
        }
      >
        <CollapsableFormSection
          header="Account email address"
          key="account_email"
        >
          <ChangeEmailForm
            loading={false}
            onChangeEmailAddress={[MockFunction]}
          />
        </CollapsableFormSection>
      </CollapsableForm>
    </Col>
  </Row>
</Fragment>
`;

exports[`SettingsPage renders page with authors profile section when user has author profile 1`] = `
<Fragment>
  <DocumentHead
    title="Settings"
  />
  <Row
    align="middle"
    className="mv3"
    justify="center"
  >
    <Col
      lg={21}
      md={22}
      xs={24}
      xxl={18}
    >
      <ForwardRef
        bodyStyle={
          Object {
            "padding": "12px 16px",
          }
        }
      >
        <h2>
          Settings
        </h2>
        <p>
          Manage your Inspire account
        </p>
      </ForwardRef>
    </Col>
  </Row>
  <Row
    align="middle"
    className="mb3"
    justify="center"
  >
    <Col
      lg={21}
      md={22}
      xs={24}
      xxl={18}
    >
      <CollapsableForm
        openSections={
          Array [
            "account_email",
            "author_email",
            "orcid",
          ]
        }
      >
        <CollapsableFormSection
          header="Account email address"
          key="account_email"
        >
          <ChangeEmailForm
            loading={false}
          />
        </CollapsableFormSection>
        <CollapsableFormSection
          header="Author email address"
          key="author_email"
        >
          <p>
            Change the email addresses registered on your author profile. These are used by other INSPIRE users to contact you and for the automatic matching of your papers.
          </p>
          <EventTracker
            eventAction="Edit"
            eventCategory="Settings"
            eventId="Edit 1234567 record"
            eventPropName="onClick"
            extractEventArgsToForward={null}
          >
            <Link
              className="db pb3"
              data-test-id="author-form"
              to="/submissions/authors/1234567"
            >
              Update author information
            </Link>
          </EventTracker>
        </CollapsableFormSection>
      </CollapsableForm>
    </Col>
  </Row>
</Fragment>
`;

exports[`SettingsPage renders page with error 1`] = `
<Fragment>
  <DocumentHead
    title="Settings"
  />
  <Row
    align="middle"
    className="mv3"
    justify="center"
  >
    <Col
      lg={21}
      md={22}
      xs={24}
      xxl={18}
    >
      <Alert
        closable={true}
        message="Error occured"
        showIcon={true}
        type="error"
      />
    </Col>
  </Row>
  <Row
    align="middle"
    className="mv3"
    justify="center"
  >
    <Col
      lg={21}
      md={22}
      xs={24}
      xxl={18}
    >
      <ForwardRef
        bodyStyle={
          Object {
            "padding": "12px 16px",
          }
        }
      >
        <h2>
          Settings
        </h2>
        <p>
          Manage your Inspire account
        </p>
      </ForwardRef>
    </Col>
  </Row>
  <Row
    align="middle"
    className="mb3"
    justify="center"
  >
    <Col
      lg={21}
      md={22}
      xs={24}
      xxl={18}
    >
      <CollapsableForm
        openSections={
          Array [
            "account_email",
            "author_email",
            "orcid",
          ]
        }
      >
        <CollapsableFormSection
          header="Account email address"
          key="account_email"
        >
          <ChangeEmailForm
            loading={false}
          />
        </CollapsableFormSection>
      </CollapsableForm>
    </Col>
  </Row>
</Fragment>
`;

exports[`SettingsPage renders page with orcid section when user has orcid profile 1`] = `
<Fragment>
  <DocumentHead
    title="Settings"
  />
  <Row
    align="middle"
    className="mv3"
    justify="center"
  >
    <Col
      lg={21}
      md={22}
      xs={24}
      xxl={18}
    >
      <ForwardRef
        bodyStyle={
          Object {
            "padding": "12px 16px",
          }
        }
      >
        <h2>
          Settings
        </h2>
        <p>
          Manage your Inspire account
        </p>
      </ForwardRef>
    </Col>
  </Row>
  <Row
    align="middle"
    className="mb3"
    justify="center"
  >
    <Col
      lg={21}
      md={22}
      xs={24}
      xxl={18}
    >
      <CollapsableForm
        openSections={
          Array [
            "account_email",
            "author_email",
            "orcid",
          ]
        }
      >
        <CollapsableFormSection
          header="Account email address"
          key="account_email"
        >
          <ChangeEmailForm
            loading={false}
          />
        </CollapsableFormSection>
        <CollapsableFormSection
          header="Orcid settings"
          key="orcid"
        >
          <Connect(OrcidPushSetting) />
        </CollapsableFormSection>
      </CollapsableForm>
    </Col>
  </Row>
</Fragment>
`;
